fix: add Welly name, clean up duplicate file

--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
           <p class="sub" style="margin-top:10px; opacity:.85;">Thank you for every sacrifice, every prayer, every sleepless night.</p>
           <p class="sub" style="margin-top:10px; opacity:.85;">You gave me everything and asked for nothing back.</p>
           <p class="sub" style="margin-top:14px; font-weight:600;">I love you more than words can say. <span class="heart" style="font-size:inherit;">💐</span></p>
-          <p class="sub" style="margin-top:18px; font-size:14px; opacity:.65;">— Your son, always</p>
+          <p class="sub" style="margin-top:18px; font-size:14px; opacity:.65;">— Your son Welly, always</p>
         </div>
       </div>
 
@@ -307,7 +307,7 @@
     { t: "// She never once gave up on me", c:"cm" },
     { t: "", c:"op" },
     { t: "const myLove = Love.create({", c:"op" },
-    { t: "  from: \"Your son\",", c:"st" },
+    { t: "  from: \"Your son Welly\",", c:"st" },
     { t: "  to: Mum,", c:"op" },
     { t: "  amount: Number.MAX_SAFE_INTEGER,", c:"nu" },
     { t: "  expires: null,  // never", c:"fn" },
